--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "babel-core": "6.26.3",
@@ -13,7 +15,10 @@
     "jest": "27.5.1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.6.1"
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "parcel-bundler": "^1.6.1",
+    "typescript": "^4.5.5"
   },
   "keywords": []
 }
