--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll"
@@ -14,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "keywords": []
